--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "Luiz Felipe",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.5.1",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "eslint": "^8.39.0",
+    "jest": "^29.5.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
   }
