--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Project to show my skills to create authentication",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test:entities": "jest src/app/core/entities/*.spec.ts"
   },
   "author": "Luiz Felipe",
   "license": "ISC",
@@ -14,6 +14,7 @@
     "@typescript-eslint/parser": "^5.59.2",
     "eslint": "^8.39.0",
     "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
   }
