--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test:entities": "jest src/app/core/entities/*.spec.ts",
     "test:useCases": "jest src/app/data/useCases/*.spec.ts",
-    "test":"jest src/app/**/*.spec.ts"
+    "test": "jest src/app/**/*.spec.ts"
   },
   "author": "Luiz Felipe",
   "license": "ISC",
@@ -16,8 +16,12 @@
     "@typescript-eslint/parser": "^5.59.2",
     "eslint": "^8.39.0",
     "jest": "^29.5.0",
+    "prisma": "^4.14.0",
     "ts-jest": "^29.1.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
+  },
+  "dependencies": {
+    "@prisma/client": "^4.14.0"
   }
 }
