🧹 CHORE: test:repositories new script add

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Project to show my skills to create authentication",
   "main": "index.js",
   "scripts": {
+    "test:repositories": "jest src/app/infra/repository/*.spec.ts",
     "test:entities": "jest src/app/core/entities/*.spec.ts",
     "test:useCases": "jest src/app/data/useCases/*.spec.ts",
     "test": "jest src/app/**/*.spec.ts"
