--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test:repositories": "jest src/app/infra/repository/*.spec.ts",
+    "test:services": "jest src/app/infra/services/*.spec.ts",
     "test:entities": "jest src/app/core/entities/*.spec.ts",
     "test:useCases": "jest src/app/data/useCases/*.spec.ts",
     "test": "jest src/app/**/*.spec.ts"
@@ -12,7 +13,11 @@
   "author": "Luiz Felipe",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/dotenv": "^8.2.0",
     "@types/jest": "^29.5.1",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/nodemailer": "^6.4.7",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "eslint": "^8.39.0",
@@ -23,6 +28,10 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
-    "@prisma/client": "^4.14.0"
+    "@prisma/client": "^4.14.0",
+    "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
+    "jsonwebtoken": "^9.0.0",
+    "nodemailer": "^6.9.2"
   }
 }
