--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "test:services": "jest src/app/infra/services/*.spec.ts",
     "test:entities": "jest src/app/core/entities/*.spec.ts",
     "test:useCases": "jest src/app/data/useCases/*.spec.ts",
-    "test:cov":"jest --coverage",
+    "test:cov": "jest --coverage",
     "test": "jest src/app/**/*.spec.ts"
   },
   "author": "Luiz Felipe",
   "license": "ISC",
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.5.1",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/nodemailer": "^6.4.7",
@@ -31,7 +33,9 @@
   "dependencies": {
     "@prisma/client": "^4.14.0",
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "nodemailer": "^6.9.2"
   }
