--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test:services": "jest src/app/infra/services/*.spec.ts",
     "test:entities": "jest src/app/core/entities/*.spec.ts",
     "test:useCases": "jest src/app/data/useCases/*.spec.ts",
+    "test:routes":"jest --runInBand src/app/main/controllers/tests/*.spec.ts",
     "test:cov": "jest --coverage",
     "test": "jest src/app/**/*.spec.ts"
   },
@@ -21,6 +22,7 @@
     "@types/jest": "^29.5.1",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/nodemailer": "^6.4.7",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "eslint": "^8.39.0",
@@ -37,6 +39,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "nodemailer": "^6.9.2"
+    "nodemailer": "^6.9.2",
+    "supertest": "^6.3.3"
   }
 }
